fixing touch on mobile issues

--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -130,8 +130,8 @@ h3 {
 .buttongroup {
     display: flex;
     gap: 10px  ;
-    margin-top: 15px;
-    margin-top: 30px;
+
+    margin-top: 20px;
 }
 
 button {
@@ -191,7 +191,9 @@ border: 1px solid #ccc;
 border-radius: 6px;
 background: #f9f9f9;
 margin-top: 10px;
+touch-action: none;
 }
+
 
 
 @media (max-width: 600px) {
